force-app/main/default/objects/Ankuendigung__c/Ankuendigung__c.object-meta.xml
<CustomObject>
    <label>Ankündigung</label>
    <nameField>
        <label>Ankündigungen Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ankündigungen</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>