force-app/main/default/objects/Ankuendigung__c/fields/AnzeigenBis__c.field-meta.xml
<CustomField>
    <fullName>AnzeigenBis__c</fullName>
    <label>Anzeigen bis</label>
    <type>DateTime</type>
</CustomField>