force-app/main/default/objects/Ankuendigung__c/fields/AnzeigenVon__c.field-meta.xml
<CustomField>
    <fullName>AnzeigenVon__c</fullName>
    <label>Anzeigen von</label>
    <type>DateTime</type>
</CustomField>