force-app/main/default/objects/Ankuendigung__c/fields/Inhalt__c.field-meta.xml
<CustomField>
    <fullName>Inhalt__c</fullName>
    <label>Inhalt</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>